[package]
name = "rusty-chain"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to create SSL certificate chains."
authors = ["Ömer Üstün <omerbustun@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/omerbustun/rusty-chain"
keywords = ["ssl", "certificate", "chain", "cli", "rust"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md"]

[dependencies]
clap = "4.4.11"
openssl = "0.10.61"
dialoguer = "0.11.0"
